Variance-Shadow Display-Error in Viewport with Matcap #40283

Closed
opened 2014-05-20 18:48:08 +02:00 by Waiel Al · 8 comments

System Information
Windows 7 / GTX760

Blender Version
2.70 19e627c (also have seen this error in older versions)

Short description of error
If you turn on Matcaps in the Solid-View and then switch to Texture-View with GLSL turned on the Variance-Shadows aren't displayed correctly in the 3D-viewport.
They work in the BGE, but if you want to a correct display in the viewport you have to deactivate Matcap.
Simple-Shadows aren't affected by this problem.

I don't know, if this error also shows up on Linux/Mac.

**System Information** Windows 7 / GTX760 **Blender Version** 2.70 19e627c (also have seen this error in older versions) **Short description of error** If you turn on Matcaps in the Solid-View and then switch to Texture-View with GLSL turned on the Variance-Shadows aren't displayed correctly in the 3D-viewport. They work in the BGE, but if you want to a correct display in the viewport you have to deactivate Matcap. Simple-Shadows aren't affected by this problem. I don't know, if this error also shows up on Linux/Mac.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @waielal

Added subscriber: @waielal

Added subscriber: @ideasman42

Added subscriber: @ideasman42

No blend file provided.

No blend file provided.
Author

Here the Variance-Shadow doesn't work:
shadow_with_matcap.blend
Here it does:
shadow_without_matcap.blend

Both are the same file, except that Matcap is turned on in the one file and off in the other file.

Here the Variance-Shadow doesn't work: [shadow_with_matcap.blend](https://archive.blender.org/developer/F89607/shadow_with_matcap.blend) Here it does: [shadow_without_matcap.blend](https://archive.blender.org/developer/F89608/shadow_without_matcap.blend) Both are the same file, except that Matcap is turned on in the one file and off in the other file.

This issue was referenced by 90db85a263

This issue was referenced by 90db85a26301216d11c2adc956046b276ce8ef5f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 90db85a263.

Closed by commit 90db85a263.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40283
No description provided.