Fix T40283: Matcaps disables GLSL shadows